@@ -73,6 +73,15 @@ indentified by indices, starting at zero e.g.
  $elems->slice(1, 2);    # The second and the third elements.
  $elems->slice(-1);      # Same as last.
 
+=head3 split
+
+Splits a collection into a list of collections, with each collection
+containing one element.
+
+ @elems = $elems->split;
+
+ $elems->split == $elems->size;  # true
+
 =head2 Other
 
 =head3 find
