@@ -8,6 +8,8 @@
     <body>
         <h1>ᴛ̲ʜ̲ᴇ̲ʀ̲ᴇ̲ ̲ɪ̲s̲ ̲ɴ̲ᴏ̲ ̲U̲ɴ̲ɪ̲ᴄ̲ᴏ̲ᴅ̲ᴇ̲ ̲ᴍ̲ᴀ̲ɢ̲ɪ̲ᴄ̲ ̲ʙ̲ᴜ̲ʟ̲ʟ̲ᴇ̲ᴛ̲</h1>
         <h2 id="ghost" style="display:none"> 👻</h2>
+        <h3>foo</h3>
+        <h3>bar</h3>
         <form>
             <fieldset>
                 <legend>text</legend>
